# watertender

./: Cargo.toml  README.md  idea.md
examples/: cube.rs  image.rs  multi_object.rs  starter_kit_cube.rs  triangle.rs  tryit.rs  unlit.vert  unlit.vert.spv  unlit_tex.frag  unlit_tex.frag.spv
shaders/: unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv  unlit_tex.frag.spv
src/: alloc_helpers.rs  app_info.rs  arcball.rs  core.rs  defaults.rs  frame_data_ubo.rs  framebuffer_mgr.rs  hardware_query.rs  headless_backend.rs  lib.rs  mainloop.rs  memory.rs  mesh.rs  multi_platform_camera.rs  openxr_backend.rs  platform.rs  render_pass.rs  shader.rs  staging_buffer.rs  starter_kit.rs  swapchain_images.rs  trivial.rs  winit_arcball.rs  winit_backend.rs
src/shortcuts/: arcball.rs  camera.rs  defaults.rs  frame_data_ubo.rs  framebuffer_mgr.rs  memory.rs  mesh.rs  mod.rs  multi_platform_camera.rs  render_pass.rs  renderpass.rs  shader.rs  staging_buffer.rs  starter_kit.rs  synchronization.rs  vertex.rs  winit_arcball.rs  winit_nav_camera.rs  xr_camera.rs
