[package]
name = "watertender"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[features]
default = ["winit", "openxr"]

[dependencies]
anyhow = "1"
erupt = "0.18"
winit = { version = "0.24", optional = true }
openxr = { version = "0.14", optional = true }
gpu-alloc-erupt = { git = "https://github.com/Friz64/gpu-alloc.git", branch = "erupt-update-18" }
gpu-alloc = { git = "https://github.com/Friz64/gpu-alloc.git", branch = "erupt-update-18" }
bytemuck = "1.5"
ctrlc = "3.1"
#gpu-alloc-erupt = "0.3"
#gpu-alloc = "0.3"
