[package]
name = "watertender"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[features]
default = ["winit", "openxr", "nalgebra"]

[dependencies]
anyhow = "1"
erupt = "0.18"
winit = { version = "0.24", optional = true }
openxr = { version = "0.14", optional = true }
bytemuck = "1.5"
ctrlc = "3.1"
nalgebra = { version = "0.26", optional = true }
gpu-alloc-erupt = "0.4"
gpu-alloc = "0.4"

[dev-dependencies]
png = "0.16.8"
